# Ask-Your-Fundamentals

./: .dockerignore  .gitignore  Dockerfile  README.md  docker.sh  index_ingestion.py  pyproject.toml
config/: settings.yaml
src/: app.py  chat_terminal.py  evaluation_pipeline.py  mapper.py  markdown_chunker.py  marker_parser.py  qa_creator.py  utils.py
src/components/: generate_answer.py  graph_constructor.py  retrieve_content.py  schemas.py
src/index_ingestion/: ingestion_main.py  markdown_chunker.py  marker_parser.py  utils.py
src/prompts/: generate_answer.py
src/rag_architecture/: graph_constructor.py
src/rag_architecture/components/: extract_answer.py  generate_answer.py  generate_response.py  retrieve_content.py  rewrite_query.py  schemas.py  utils.py
src/rag_architecture/prompts/: generate_answer.py  grading.py  rewrite_query.py
